--- a/index.html
+++ b/index.html
@@ -3,8 +3,63 @@
   <head>
     <meta charset="utf-8">
     <title>Amazing-bs3</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/media.css">
   </head>
   <body>
-    
+    <header>
+
+      <nav>
+        <div class="container">
+          <div class="row">
+            <div class="navbar-header">
+              <button class="navbar-toggle collapsed menu_btn" data-toggle="collapse"
+                      data-target="#top_menu">
+                <span class="glyphicon glyphicon-menu-hamburger"></span>
+              </button>
+              <a href="#" class="navbar-brand logo">
+                Amazing
+              </a>
+            </div>
+
+            <div class="collapse navbar-collapse navbar-right" id="top_menu">
+              <ul class="menu">
+                <li><a href="#">about me</a></li>
+                <li><a href="#">my songs</a></li>
+                <li><a href="#">my links</a></li>
+                <li><a href="#">spotify</a></li>
+                <li><a href="#">contact me</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="top_line"></div>
+        </div>
+      </nav>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="title_block">
+              <h1>
+                Amazing Dude.
+              </h1>
+              <h1>
+                Amazing Life.
+              </h1>
+              <p>
+                Welcome to the personal site of <strong>John Doe</strong>.<br>
+                A professional skier and a musician.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <script src="libs/jquery/jquery-3.1.0.min.js"></script>
+    <script src="libs/bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
