main section was added

--- a/index.html
+++ b/index.html
@@ -44,21 +44,148 @@
         <div class="row">
           <div class="col-md-4">
             <div class="title_block">
-              <h1>
-                Amazing Dude.
-              </h1>
-              <h1>
-                Amazing Life.
-              </h1>
-              <p>
-                Welcome to the personal site of <strong>John Doe</strong>.<br>
-                A professional skier and a musician.
-              </p>
+              <h1>Amazing Dude.</h1>
+              <h1>Amazing Life.</h1>
+              <p>Welcome to the personal site of <strong>John Doe</strong>.<br>
+                A professional skier and a musician.</p>
             </div>
           </div>
         </div>
       </div>
+
     </header>
+
+    <section class="main_s">
+      <div class="container-fluid">
+
+        <div class="row">
+          <div class="col-md-6 col-sm-6 p0">
+            <div class="about_photo">
+              <img src="imgs/about.png" alt="about" class="img-responsive"/>
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-6 p0">
+            <div class="about_descr">
+            <h4>Sed faucibus quis</h4>
+            <p>Fusce bibendum luctus massa,  ut tincidunt lectus tincidunt in.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, nam!
+            </p>
+          </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-3 col-sm-6 p0">
+            <div class="photo_block">
+              <div class="photo_wrap">
+                <div class="photo_descr">
+                  <h4>winter holidays</h4>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                     Similique, a!</p>
+                </div>
+              </div>
+              <img src="imgs/photo_1.png" alt="photo1" class="img-responsive">
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6 p0">
+            <div class="photo_block">
+              <div class="photo_wrap">
+                <div class="photo_descr">
+                  <h4>winter holidays</h4>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                     Similique, a!</p>
+                </div>
+              </div>
+              <img src="imgs/photo_2.png" alt="photo2" class="img-responsive">
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6 p0">
+            <div class="photo_block">
+              <div class="photo_wrap">
+                <div class="photo_descr">
+                  <h4>winter holidays</h4>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                     Similique, a!</p>
+                </div>
+              </div>
+              <img src="imgs/photo_3.png" alt="photo3" class="img-responsive">
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6 p0">
+            <div class="photo_block">
+              <div class="photo_wrap">
+                <div class="photo_descr">
+                  <h4>winter holidays</h4>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                     Similique, a!</p>
+                </div>
+              </div>
+              <img src="imgs/photo_4.png" alt="photo4" class="img-responsive">
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-12 p0">
+            <div class="instagram_block">
+              <div class="instagram_wrap">
+                <h4>instagram</h4>
+                <p>Etiam lacus dolor, tincidunt vitae  nisi in, vulputate placerat
+                  odio. Pellentesque iaculis.</p>
+              </div>
+              <div class="inst_btn">
+                <a href="#">view on instagram</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-12 p0">
+            <div class="play_block">
+              <div class="play_wrap">
+                <div class="play_descr">
+                  <h4>Self-Effacing Rage</h4>
+                  <h5>FT. Fascinating Collision</h5>
+                  <p>Director: James G. Rohrer<br>
+                     Production Company: Sycamore<br>
+                     Producer: Laura S. Carlton<br>
+                     Executive Producer: Jack M. Heckart</p>
+                  <div class="play_btn">
+                    <a href="#">click to play</a>
+                    <span class="glyphicon glyphicon-play"></span>
+                  </div>
+                </div>
+              </div>
+            <img src="imgs/photo_6.png" alt="photo6" class="img-responsive">
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6 p0">
+            <div class="spotify_block">
+              <h4>SPOTIFY</h4>
+              <p>Follow me, stream and add  my songs to your Spotify playlist.</p>
+              <div class="spotify_btn">
+                <a href="#">FOLLOW ON SPOTIFY</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 p0">
+            <div class="itunes_block">
+              <h4>ITUNES</h4>
+              <p>Buy and download my songs from iTunes.</p>
+              <div class="itunes_btn">
+                <a href="#">BUY FROM ITUNES</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
     <script src="libs/jquery/jquery-3.1.0.min.js"></script>
     <script src="libs/bootstrap/js/bootstrap.min.js"></script>
   </body>
