--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/media.css">
@@ -28,11 +29,11 @@
 
             <div class="collapse navbar-collapse navbar-right" id="top_menu">
               <ul class="menu">
-                <li><a href="#">about me</a></li>
-                <li><a href="#">my songs</a></li>
-                <li><a href="#">my links</a></li>
-                <li><a href="#">spotify</a></li>
-                <li><a href="#">contact me</a></li>
+                <li><a href="#about">about me</a></li>
+                <li><a href="#holidays">my holidays</a></li>
+                <li><a href="#instagram">instagram</a></li>
+                <li><a href="#spotify">spotify</a></li>
+                <li><a href="#contact">contact me</a></li>
               </ul>
             </div>
           </div>
@@ -59,24 +60,24 @@
       <div class="container-fluid">
 
         <div class="row">
-          <div class="col-md-6 col-sm-6 p0">
-            <div class="about_photo">
+          <div class="col-lg-3 col-sm-6 p0">
+            <div class="about_photo" id="about">
               <img src="imgs/about.png" alt="about" class="img-responsive"/>
             </div>
           </div>
-          <div class="col-md-6 col-sm-6 p0">
+          <div class="col-lg-9 col-sm-6 p0">
             <div class="about_descr">
-            <h4>Sed faucibus quis</h4>
-            <p>Fusce bibendum luctus massa,  ut tincidunt lectus tincidunt in.
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, nam!
-            </p>
+              <h4>Sed faucibus quis</h4>
+              <p>Fusce bibendum luctus massa,  ut tincidunt lectus tincidunt in.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, nam!
+              </p>
           </div>
           </div>
         </div>
 
         <div class="row">
           <div class="col-md-3 col-sm-6 p0">
-            <div class="photo_block">
+            <div class="photo_block" id="holidays">
               <div class="photo_wrap">
                 <div class="photo_descr">
                   <h4>winter holidays</h4>
@@ -127,15 +128,15 @@
 
         <div class="row">
           <div class="col-md-12 p0">
-            <div class="instagram_block">
+            <div class="instagram_block" id="instagram">
               <div class="instagram_wrap">
                 <h4>instagram</h4>
                 <p>Etiam lacus dolor, tincidunt vitae  nisi in, vulputate placerat
                   odio. Pellentesque iaculis.</p>
               </div>
-              <div class="inst_btn">
-                <a href="#">view on instagram</a>
-              </div>
+              <button type="button" class="white_btn">
+                view on instagram
+              </button>
             </div>
           </div>
         </div>
@@ -147,14 +148,16 @@
                 <div class="play_descr">
                   <h4>Self-Effacing Rage</h4>
                   <h5>FT. Fascinating Collision</h5>
-                  <p>Director: James G. Rohrer<br>
-                     Production Company: Sycamore<br>
-                     Producer: Laura S. Carlton<br>
-                     Executive Producer: Jack M. Heckart</p>
-                  <div class="play_btn">
-                    <a href="#">click to play</a>
+                  <p>
+                    Director: James G. Rohrer<br>
+                    Production Company: Sycamore<br>
+                    Producer: Laura S. Carlton<br>
+                    Executive Producer: Jack M. Heckart
+                  </p>
+                  <button class="white_btn play_btn">
+                    click to play
                     <span class="glyphicon glyphicon-play"></span>
-                  </div>
+                  </button>
                 </div>
               </div>
             <img src="imgs/photo_6.png" alt="photo6" class="img-responsive">
@@ -164,27 +167,106 @@
 
         <div class="row">
           <div class="col-md-6 p0">
-            <div class="spotify_block">
-              <h4>SPOTIFY</h4>
+            <div class="spotify_block" id="spotify">
+              <h4>spotify</h4>
               <p>Follow me, stream and add  my songs to your Spotify playlist.</p>
-              <div class="spotify_btn">
-                <a href="#">FOLLOW ON SPOTIFY</a>
-              </div>
+              <button type="button" class="white_btn">
+                follow on spotify
+              </button>
             </div>
           </div>
           <div class="col-md-6 p0">
             <div class="itunes_block">
-              <h4>ITUNES</h4>
+              <h4>itunes</h4>
               <p>Buy and download my songs from iTunes.</p>
-              <div class="itunes_btn">
-                <a href="#">BUY FROM ITUNES</a>
-              </div>
+              <button class="white_btn itunes_btn">
+                buy from itunes
+              </button>
             </div>
           </div>
         </div>
 
       </div>
     </section>
+
+    <footer>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-4 col-sm-6">
+            <div class="copyright_block" id="contact">
+              <h4>
+                amazing dude.<br>
+                amazing life.
+              </h4>
+              <p>
+                Mauris ornare lobortis arcu, at sodales dolor finibus nec. In
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure
+                aliquid facere odit. Incidunt facere beatae expedita rerum
+                nostrum fugit fuga. Lorem ipsum dolor sit amet, consectetur
+                adipisicing elit. Consequatur possimus ducimus iure et similique
+                culpa ab a sapiente autem hic voluptas sunt ea facere, nisi
+                architecto molestias assumenda nostrum? Minima?
+               </p>
+              <i class="fa fa-copyright" aria-hidden="true"></i>
+              <span>2015. all rights reserved.</span>
+            </div>
+          </div>
+          <div class="col-md-2 col-sm-6">
+            <div class="contact_block">
+              <h4>contact me</h4>
+              <p>
+                1242 Crestview Terrace Artesia Wells, TX 78001<br>
+              </p>
+              <p>
+                Phone: 830-676-7974<br>
+                Email: hi@site.com
+              </p>
+              <h4>follow me on</h4>
+              <div class="social_block">
+                <button type="button" class="social_btn">
+                  <i class="fa fa-facebook" aria-hidden="true"> facebook</i>
+                </button>
+                <button type="button" class="social_btn">
+                  <i class="fa fa-twitter" aria-hidden="true"> twitter</i>
+                </button>
+                <button type="button" class="social_btn">
+                  <i class="fa fa-instagram" aria-hidden="true"> instagram</i>
+                </button>
+                <button type="button" class="social_btn">
+                  <i class="fa fa-spotify" aria-hidden="true"> spotify</i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12">
+            <div class="subscribe_block">
+              <h4>subscribe</h4>
+              <p>
+                Duis sollicitudin facilisis dui ac aliquet. Phasellus tempor so
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A
+                obcaecati, perspiciatis id dicta facilis, expedita.
+              </p>
+              <input type="email" name="sub_email" placeholder="enter your email address">
+              <button type="button" class="subscribe_btn">
+                <i class="fa fa-arrow-right" aria-hidden="true"></i>
+              </button>
+              <h4>sponsor</h4>
+              <div class="sponsor_block">
+                <button type="button" class="sponsor_btn">
+                  <i class="fa fa-info-circle" aria-hidden="true"></i>
+                </button>
+                <button type="button" class="sponsor_btn">
+                  <i class="fa fa-info-circle" aria-hidden="true"></i>
+                </button>
+                <button type="button" class="sponsor_btn">
+                  <i class="fa fa-info-circle" aria-hidden="true"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="libs/jquery/jquery-3.1.0.min.js"></script>
     <script src="libs/bootstrap/js/bootstrap.min.js"></script>
